# Physical_AI_-_Humanoid-Robotics-

./: .gitignore  README.md  test-chat-api.js  test_backend.py
.claude/skills/: better-auth.skill.md  book-creator.skill.md
backend/: .gitignore  README.md  api.py  embedding_store.py  main.py  myagent.py  pyproject.toml  requirements.txt
history/prompts/constitution/: 1-amend-constitution.constitution.prompt.md
history/prompts/general/: 1-implement-physical-ai-humanoid-robotics-textbook.general.prompt.md  2-create-textbook-spec.spec.prompt.md  3-plan-robotics-textbook.plan.prompt.md  4-create-robotics-tasks.tasks.prompt.md  5-create-rag-agent-spec.spec.prompt.md  6-create-rag-agent-plan.plan.prompt.md  6-fix-duplicate-sitemap-plugin.red.prompt.md  7-create-rag-agent-tasks.tasks.prompt.md  8-implement-rag-agent-backend.implement.prompt.md  9-create-chat-interface.general.prompt.md
history/prompts/rag-ingestion/: 5-create-rag-knowledge-ingestion-pipeline-spec.spec.prompt.md
my-robotics-textbook/: .eslintrc.js  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
my-robotics-textbook/docs/: accessibility.md  documentation.md  intro.md
my-robotics-textbook/docs/_templates/: frontmatter.mdx
my-robotics-textbook/docs/appendix/: glossary.md  references.mdx  troubleshooting.mdx
specs/1-rag-agent-fastapi/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-ingestion/: spec.md
specs/1-robotics-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+64 files in other folders)
